[package]
name = "fyanrirt"
version = "0.2.7"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["cargo"] }
colored = "3.0.0"
env = "1.0.1"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
rusmpp = { version = "0.1.3", features = ["full", "pretty-hex-fmt", "tokio-codec", "tracing"], path = "lib/rusmpp" }
futures = "0.3.31"
